syntax = "proto3";
package tracking.service;

option java_multiple_files = true;
option java_package = "dev.ngdangkiet.dkmicroservices.tracking.protobuf";
option java_outer_classname = "TrackingProtobuf";

message PUserTrackingActivity {
  int64 id = 1;
  int64 user_id = 2;
  string ipAddress = 3;
  string request_url = 4;
  string method = 5;
  string action = 6;
  string request_body_json = 7;
  int64 logged_time = 8;
}

message PGetUserTrackingActivitiesRequest {
  int64 user_id = 1;
  string action = 2;
  string method = 3;
}

message PGetUserTrackingActivitiesResponse {
  int32 code = 1;
  repeated PUserTrackingActivity data = 2;
}